--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Startup Jobs</title>
+  <%= favicon_link_tag 'icon.gif' %>
+  <%= stylesheet_link_tag    'http://fonts.googleapis.com/css?family=Roboto:700,400,300' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
