--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,7 +7,7 @@
   <div id="process">
     <h2>The Process</h2>
     <h4>Data Collection</h4>
-      <p>Data was obtained from the AngelList API <a href="https://angel.co/api/spec/jobs" target="_blank" class="api">/jobs</a> endpoint.<br>
+      <p>Data was obtained from the AngelList API <a href="https://angel.co/api/spec/jobs" target="_blank" class="api">/jobs</a> endpoint, courtesy of whitelist access.<br>
       Only <strong>full-time</strong> jobs in <strong>San Francisco, CA</strong> were analyzed to normalize for differences across job type and geography.<br>
       Each job listing included salary range and <strong>skill tag(s)</strong> that represent skills related to a job.</p>
     <h4>Data Cleanup</h4>
