--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Startup Jobs</title>
-  <%= favicon_link_tag 'icon.gif' %>
+  <%= favicon_link_tag 'https://i.imgur.com/4YTgRXN.gif' %>
   <%= stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Roboto:700,400,300' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
