--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div id="heading">
-    Most In-Demand Skills in San Francisco
+    In-Demand Skills at Startups
     <p class="sub-heading">Based on data from <a href="https://angel.co/api/spec/jobs" target="_blank">AngelList</a> (as of June 8, 2015). <span class="more">Read about the data analysis <a href="#process">process</a>.</span></p>
   </div>
   <div class="chart-container"></div>
